pkg/plugins/policies/meshtimeout/plugin/testdata/outbound_listener_with_different_timeouts_per_route.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10001
filterChains:
  - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          commonHttpProtocolOptions:
            idleTimeout: 0s
          httpFilters:
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          routeConfig:
            name: outbound:other-service
            requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
              - domains:
                  - '*'
                name: other-service
                routes:
                  - match:
                      headers:
                        - name: :method
                          stringMatch:
                            exact: GET
                      path: /another-backend
                    name: U8NGexJyQPtOd+lzwvsjLMysuDL6MmTJPSRX4C43niU=
                    route:
                      cluster: other-service
                      timeout: 0s
                  - match:
                      prefix: /
                    name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                    route:
                      cluster: other-service
                      timeout: 0s
          statPrefix: outbound_127_0_0_1_10001
name: outbound:127.0.0.1:10001
trafficDirection: OUTBOUND
